--- a/css/style.css
+++ b/css/style.css
@@ -109,18 +109,12 @@ body {
 .header {
   background: #ffffff;
   border-bottom: 1px solid #ececec;
-
-  /* padding-top: 24px;
-  padding-bottom: 24px; */
-}
-.header-shadow {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .header .container {
   align-items: center;
 }
-.head-nav {
+.header__nav {
   align-items: center;
 }
 .logo {
@@ -143,17 +137,14 @@ body {
 
   margin-bottom: 20px;
 }
-.logo-web {
+.logo__web {
   color: var(--text-color-accent);
 }
-/* .nav {
-}
-.nav-item {
-} */
-.nav-item + .nav-item {
+
+.header__nav__item + .header__nav__item {
   margin-left: 50px;
 }
-.item {
+.header__list__item {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -173,11 +164,11 @@ body {
   color: var(--text-color-accent);
 }
 
-.current {
+.header-current {
   position: relative;
   color: var(--text-color-accent);
 }
-.current:after {
+.header-current:after {
   content: '';
   position: absolute;
   width: 100%;
@@ -190,10 +181,10 @@ body {
   background-color: var(--button-backgr-color);
 }
 
-.head-cont {
+.header__content {
   margin-left: auto;
 }
-.cont {
+.header__content__item {
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -210,22 +201,22 @@ body {
 
   /* margin-left: 50px; */
 }
-.head-cont-item + .head-cont-item {
+.header__content__list + .header__content__list {
   margin-left: 50px;
 }
-.cont:hover,
-.cont:focus {
+.header__content__item:hover,
+.header__content__item:focus {
   color: var(--text-color-accent);
 }
 
 /* ========================== icons  ================================== */
-.mail {
+.header__icon__mail {
   display: inline-block;
   margin-right: 10px;
   fill: currentcolor;
 }
 
-.smartphone {
+.header__icon__smartphone {
   display: inline-block;
   margin-right: 10px;
   fill: currentColor;
@@ -249,7 +240,7 @@ body {
   padding-bottom: 200px;
 }
 
-.hero-title {
+.hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -268,7 +259,7 @@ body {
 .hero .container {
   text-align: center;
 }
-.hero-button {
+.hero__button {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -311,7 +302,7 @@ body {
   margin-left: -30px;
 }
 
-.prefs-item {
+.prefs__item {
   /* width: 270px; */
   width: calc((100% - 120px) / 4);
   margin-top: 30px;
@@ -322,7 +313,7 @@ body {
 .prefs-item + .prefs-item {
   margin-left: 30px;
 } */
-.prefs-bg {
+.prefs__bg {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -338,7 +329,7 @@ body {
   height: 70px;
 } */
 
-.prefs-item-h {
+.prefs__item__h {
   font-size: 14px;
   font-weight: 700;
   line-height: 1.15;
