--- a/css/style.css
+++ b/css/style.css
@@ -111,11 +111,10 @@ body {
   border-bottom: 1px solid #ececec;
 }
 
-.header .container {
+.item-center {
   align-items: center;
 }
 .header__nav {
-  align-items: center;
 }
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -125,14 +124,14 @@ body {
 
   display: inline-block;
 }
-.header .logo {
+.logo--header {
   color: var(--text-color-pureblack);
 
   margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 25px;
 }
-.footer .logo {
+.logo--footer {
   color: var(--text-color-white);
 
   margin-bottom: 20px;
@@ -348,7 +347,7 @@ body {
 /* .what-wedo {
 } */
 
-.wedo-h {
+.wedo__h {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -359,14 +358,14 @@ body {
   margin-bottom: 50px;
 }
 
-.wedo {
+.what-wedo__list {
   flex-wrap: wrap;
 
   margin-top: -30px;
   margin-left: -30px;
 }
 
-.wedo-item {
+.what-wedo__list__item {
   width: calc((100% - 90px) / 3);
   margin-top: 30px;
   margin-left: 30px;
@@ -374,7 +373,7 @@ body {
   position: relative;
 }
 
-.wedo-p {
+.what-wedo__list__p {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.15;
@@ -418,7 +417,7 @@ body {
 .our-team {
   background-color: var(--color-team-backgr);
 }
-.team-h {
+.our-team__h {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -428,14 +427,14 @@ body {
 
   margin-bottom: 50px;
 }
-.team {
+.our-team__list {
   flex-wrap: wrap;
   align-items: flex-start;
   margin-top: -30px;
   margin-left: -30px;
 }
 
-.team-item {
+.our-team__list__item {
   background-color: #ffffff;
 
   width: calc((100% - 120px) / 4);
@@ -476,10 +475,10 @@ body {
 /* .team-item-i {
 } */
 
-.team-description {
+.our-team__list__description {
   padding: 30px 32px;
 }
-.team-item-h {
+.our-team__list__description__h {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
@@ -491,7 +490,7 @@ body {
   display: block;
   margin-bottom: 10px;
 }
-.team-item-p {
+.our-team__list__description__p {
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
@@ -503,19 +502,19 @@ body {
 }
 
 .social-list {
-  align-items: center;
 }
-.social-list li {
+
+.social-list__item {
   border-radius: 50%;
 }
 
-.social-list li:not(:last-child) {
+.social-list__item:not(:last-child) {
   margin-right: 10px;
 }
 /* .social-list li:hover,
 .social-list li:focus {
 } */
-.link-social {
+.social-list__item__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -531,8 +530,8 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-social:hover,
-.link-social:focus {
+.social-list__item__link:hover,
+.social-list__item__link:focus {
   background-color: var(--button-backgr-color);
   fill: var(--text-color-white);
 }
@@ -553,14 +552,14 @@ body {
   margin-bottom: 50px;
 }
 
-.logo-clients {
+.cloents__logo {
   display: block;
 }
-.logo-clients:not(:last-child) {
+.clients__logo:not(:last-child) {
   margin-right: 30px;
 }
 
-.icon-clients {
+.clients__logo__icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -576,8 +575,8 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-clients:hover,
-.icon-clients:focus {
+.clients__logo__icon:hover,
+.clients__logo__icon:focus {
   border-color: var(--button-backgr-color);
   fill: var(--text-color-accent);
 }
@@ -590,7 +589,7 @@ body {
   padding-bottom: 60px;
 }
 
-.footer .container {
+.items-baseline {
   align-items: baseline;
 }
 
@@ -599,16 +598,16 @@ body {
 }
 /* .adress {
 } */
-.footer-adress-item {
+.footer-adress__item {
   display: inline-block;
   margin-bottom: 9px;
   /* or 171% */
 }
-.footer-adress-item:last-child {
+.footer-adress__item:last-child {
   margin-bottom: 0;
   /* or 171% */
 }
-.footer-adress-map {
+.footer-adress__map {
   font-style: normal;
   /* or 171% */
 
@@ -618,12 +617,12 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-adress-map:hover,
-.footer-adress-map:focus {
+.footer-adress__map:hover,
+.footer-adress__map:focus {
   color: var(--text-color-accent);
 }
 
-.footer-adress-cont {
+.footer-adress__cont {
   font-style: normal;
 
   color: var(--text-color-address-link);
@@ -632,16 +631,19 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-adress-cont:hover,
-.footer-adress-cont:focus {
+.footer-adress__cont:hover,
+.footer-adress__cont:focus {
   color: var(--text-color-accent);
 }
 
 .footer-follow {
+}
+
+.footer-follow--right {
   margin-left: 73px;
 }
 
-.footer-follow h3 {
+.footer-follow__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.15;
@@ -653,13 +655,102 @@ body {
   margin-bottom: 20px;
 }
 
-.footer-follow .list {
+.social-list__item--background {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.footer-follow .link-social {
+.social-list__item__link--text__white {
   fill: var(--text-color-white);
 }
+
+/* =============== footer subscribe form =========== */
+.footer-subscribe {
+}
+.footer-subscribe--end {
+  margin-left: auto;
+}
+
+.footer-subscribe-form {
+  display: flex;
+}
+
+.footer-subscribe-form__text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--text-color-white);
+  display: block;
+}
+
+.footer-subscribe-form__email {
+  width: 358px;
+
+  margin-top: 20px;
+  padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  font-size: 16px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  color: var(--text-color-white);
+}
+.footer-subscribe-form__email::placeholder {
+  font-size: 16px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-subscribe-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 29px;
+  padding-right: 28px;
+
+  margin-left: 12px;
+
+  background-color: var(--button-backgr-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 1px solid var(--button-backgr-color);
+  border-radius: 4px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--text-color-white);
+  cursor: pointer;
+
+  transition-property: background-color;
+  transition-duration: 1250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-subscribe-button:hover,
+.footer-subscribe-button:focus {
+  background-color: var(--button-main-active-bcgr-color);
+}
+.footer-subscribe-button__icon {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+}
+/* =============== footer subscribe form =========== */
+
+/* ------------------footer end ------------------- */
 
 /* <==========  page Portfolio "different styles" ========> */
 
@@ -840,6 +931,8 @@ body {
   transform: translatey(0);
 }
 
+/* ===================== Modal ==================== */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -869,7 +962,7 @@ body {
   border-radius: 4px;
 }
 
-.modal-button {
+.modal-button-close {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -892,11 +985,11 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-button:hover,
-.modal-button:focus {
+.modal-button-close:hover,
+.modal-button-close:focus {
   color: var(--text-color-accent);
 }
-.modal-icon-close {
+.modal-button-close__icon-close {
   width: 18px;
   height: 18px;
   fill: currentColor;
@@ -907,91 +1000,6 @@ body {
   visibility: hidden;
   pointer-events: none;
 }
-
-/* =============== footer subscribe form =========== */
-.footer-subscribe {
-}
-
-.footer-subscribe-form {
-  display: flex;
-  margin-left: 93px;
-}
-
-.footer-subscribe-text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.15;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-
-  color: var(--text-color-white);
-  display: block;
-}
-
-.footer-subscribe-email {
-  width: 358px;
-
-  margin-top: 20px;
-  padding-left: 16px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-
-  font-size: 16px;
-  line-height: 1.15;
-  letter-spacing: 0.03em;
-  color: var(--text-color-white);
-}
-.footer-subscribe-email::placeholder {
-  font-size: 16px;
-  line-height: 1.15;
-  letter-spacing: 0.03em;
-
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.subscribe-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: flex-end;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 29px;
-  padding-right: 28px;
-
-  margin-left: 12px;
-
-  background-color: var(--button-backgr-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border: 1px solid var(--button-backgr-color);
-  border-radius: 4px;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: var(--text-color-white);
-  cursor: pointer;
-
-  transition-property: background-color;
-  transition-duration: 1250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.subscribe-button:hover,
-.subscribe-button:focus {
-  background-color: var(--button-main-active-bcgr-color);
-}
-.subscribe-icon {
-  margin-left: 10px;
-  width: 24px;
-  height: 24px;
-}
-/* =============== footer subscribe form =========== */
 
 /* ===============    modal form ====================*/
 
@@ -1005,7 +1013,7 @@ body {
 
   color: var(--text-color-black);
 }
-.modal-text-head {
+.modal-form__title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -1017,11 +1025,11 @@ body {
   margin-bottom: 12px;
 }
 
-.input-wrapper {
+.modal-form__input-wrapper {
   position: relative;
   margin-bottom: 10px;
 }
-.label-text {
+.modal-form__label-text {
   font-size: 12px;
   line-height: 1.15;
 
@@ -1031,7 +1039,7 @@ body {
 
   margin-bottom: 4px;
 }
-.modal-input-text {
+.modal-form__input__text {
   padding-top: 12px;
   padding-right: 12px;
   padding-left: 42px;
@@ -1048,11 +1056,11 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input-text:last-child {
+.modal-form__input__text:last-child {
   margin-bottom: 20px;
 }
 
-.modal-input-text::placeholder {
+.modal-form__input__text::placeholder {
   font-size: 14px;
   line-height: 1.15;
   letter-spacing: 0.01em;
@@ -1060,14 +1068,14 @@ body {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-input-text:focus {
+.modal-form__input__text:focus {
   border-color: var(--button-backgr-color);
 }
-.modal-input-text:focus + .modal-icon {
+.modal-form__input__text:focus + .modal-form__input__icon {
   fill: var(--button-backgr-color);
 }
 
-.modal-icon {
+.modal-form__input__icon {
   position: absolute;
   width: 18px;
   height: 18px;
@@ -1091,7 +1099,7 @@ body {
   top: 243px;
 } */
 
-.modal-input-textarea {
+.modal-form__input-textarea {
   padding: 12px 16px;
   margin-bottom: 20px;
   width: 100%;
@@ -1114,25 +1122,29 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input-textarea::placeholder {
+.modal-form__input-textarea::placeholder {
   font-size: 12px;
   line-height: 1.15;
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
 }
-.modal-input-textarea:focus {
+.modal-form__input-textarea:focus {
   border-color: var(--button-backgr-color);
 }
 
 .private-policy {
   display: flex;
   flex-direction: row;
+}
+
+.modal-form__private-policy--indent {
   margin-left: 12px;
   margin-bottom: 30px;
 }
+
 /* =================== кастом ====================*/
-.custom-checkbox {
+.private-policy__custom-checkbox {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
@@ -1144,14 +1156,14 @@ body {
 }
 
 /* для элемента label, связанного с .custom-checkbox */
-.custom-checkbox + label {
+.private-policy__custom-checkbox + .private-policy__label-checkbox {
   display: inline-flex;
   align-items: center;
   user-select: none;
 }
 
 /* создание в label псевдоэлемента before со следующими стилями */
-.custom-checkbox + label::before {
+.private-policy__custom-checkbox + .private-policy__label-checkbox::before {
   content: '';
   display: inline-block;
   margin-right: 8px;
@@ -1172,12 +1184,14 @@ body {
 }
 
 /* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
-.custom-checkbox:focus:not(:checked) + label::before {
+.private-policy__custom-checkbox:focus:not(:checked)
+  + .private-policy__label-checkbox::before {
   border-color: var(--button-backgr-color);
 }
 
 /* стили для чекбокса, находящегося в состоянии checked */
-.custom-checkbox:checked + label::before {
+.private-policy__custom-checkbox:checked
+  + .private-policy__label-checkbox::before {
   border-color: #0b76ef;
   background-color: #0b76ef;
   background-image: url('../images/Vector.svg');
@@ -1185,14 +1199,15 @@ body {
 }
 
 /* стили для чекбокса, находящегося в состоянии disabled */
-.custom-checkbox:disabled + label::before {
+.private-policy__custom-checkbox:disabled
+  + .private-policy__label-checkbox::before {
   background-color: #e9ecef;
 }
 
-.modal-text {
+.private-policy__text {
   color: var(--text-color-standart);
 }
-.modal-text-link {
+.private-policy__link {
   text-decoration-line: underline;
   color: var(--text-color-accent);
 }
