--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,7 @@
 @import './layout/prefs';
 @import './layout/what-we-do';
 @import './layout/our-team';
+@import './layout/clients';
 @import './layout/footer';
 @import './layout/page-portfolio';
 @import './layout/backdrop';
