--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -36,11 +36,13 @@
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--text-color-accent);
+  }
 }
-.modal-button-close:hover,
-.modal-button-close:focus {
-  color: var(--text-color-accent);
-}
+
 .modal-button-close__icon-close {
   width: 18px;
   height: 18px;
@@ -107,22 +109,24 @@
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form__input__text:last-child {
-  margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 20px;
+  }
+
+  &::placeholder {
+    font-size: 14px;
+    line-height: 1.15;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+  }
+
+  &:focus {
+    border-color: var(--button-backgr-color);
+  }
 }
 
-.modal-form__input__text::placeholder {
-  font-size: 14px;
-  line-height: 1.15;
-  letter-spacing: 0.01em;
-
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-form__input__text:focus {
-  border-color: var(--button-backgr-color);
-}
 .modal-form__input__text:focus + .modal-form__input__icon {
   fill: var(--button-backgr-color);
 }
@@ -140,16 +144,11 @@
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  .modal-form__input__text:focus + & {
+    fill: var(--button-backgr-color);
+  }
 }
-/* .person {
-  top: 104px;
-}
-.phone {
-  top: 174px;
-}
-.email {
-  top: 243px;
-} */
 
 .modal-form__input-textarea {
   padding: 12px 16px;
@@ -173,16 +172,17 @@
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form__input-textarea::placeholder {
-  font-size: 12px;
-  line-height: 1.15;
-  letter-spacing: 0.01em;
 
-  color: rgba(117, 117, 117, 0.5);
-}
-.modal-form__input-textarea:focus {
-  border-color: var(--button-backgr-color);
+  &::placeholder {
+    font-size: 12px;
+    line-height: 1.15;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+  }
+  &:focus {
+    border-color: var(--button-backgr-color);
+  }
 }
 
 .private-policy {
@@ -205,55 +205,51 @@
   height: 1px !important;
   width: 1px !important;
   overflow: hidden;
-}
 
-/* для элемента label, связанного с .custom-checkbox */
-.private-policy__custom-checkbox + .private-policy__label-checkbox {
-  display: inline-flex;
-  align-items: center;
-  user-select: none;
-}
+  & + .private-policy__label-checkbox {
+    /* для элемента label, связанного с .custom-checkbox*/
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+  }
+  & + .private-policy__label-checkbox::before {
+    /* создание в label псевдоэлемента before со следующими стилями */
+    content: '';
+    display: inline-block;
+    margin-right: 8px;
+    width: 16px;
+    height: 15px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 2px solid var(--text-color-black);
+    border-radius: 2px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+    cursor: pointer;
 
-/* создание в label псевдоэлемента before со следующими стилями */
-.private-policy__custom-checkbox + .private-policy__label-checkbox::before {
-  content: '';
-  display: inline-block;
-  margin-right: 8px;
-  width: 16px;
-  height: 15px;
-  flex-shrink: 0;
-  flex-grow: 0;
-  border: 2px solid var(--text-color-black);
-  border-radius: 2px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 50% 50%;
-  cursor: pointer;
+    transition-property: border-color, background-image, background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-  transition-property: border-color, background-image, background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &:focus:not(:checked) + .private-policy__label-checkbox::before {
+    /* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии check*/
+    border-color: var(--button-backgr-color);
+  }
 
-/* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
-.private-policy__custom-checkbox:focus:not(:checked)
-  + .private-policy__label-checkbox::before {
-  border-color: var(--button-backgr-color);
-}
+  &:checked + .private-policy__label-checkbox::before {
+    /* стили для чекбокса, находящегося в состоянии checked*/
+    border-color: #0b76ef;
+    background-color: #0b76ef;
+    background-image: url('../images/Vector.svg');
+    background-size: contain;
+  }
 
-/* стили для чекбокса, находящегося в состоянии checked */
-.private-policy__custom-checkbox:checked
-  + .private-policy__label-checkbox::before {
-  border-color: #0b76ef;
-  background-color: #0b76ef;
-  background-image: url('../images/Vector.svg');
-  background-size: contain;
-}
-
-/* стили для чекбокса, находящегося в состоянии disabled */
-.private-policy__custom-checkbox:disabled
-  + .private-policy__label-checkbox::before {
-  background-color: #e9ecef;
+  &:disabled + .private-policy__label-checkbox::before {
+    /* стили для чекбокса, находящегося в состоянии disabled */
+    background-color: #e9ecef;
+  }
 }
 
 .private-policy__text {
@@ -284,10 +280,11 @@
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-button-send:hover,
-.modal-button-send:focus {
-  background-color: var(--button-main-active-bcgr-color);
+
+  &:hover,
+  &:focus {
+    background-color: var(--button-main-active-bcgr-color);
+  }
 }
 /* =========================== modal form end ====================== */
 
